build: Add strchrnul implementation to fix compilation on macOS

https://bugzilla.gnome.org/show_bug.cgi?id=788476